--- a/src/stylesheets/coverflow.scss
+++ b/src/stylesheets/coverflow.scss
@@ -1,3 +1,5 @@
+@use 'sass:math';
+
 .container {
   position: relative;
   background: rgba(0, 0, 0, .1);
@@ -81,10 +83,10 @@
 
   cursor: pointer;
   display: block;
-  width: $size / 1.414;
-  height: $size / 1.414 * 2;
-  // width: $size;
-  // height: $size;
+  //width: $size / 1.414;
+  //height: $size / 1.414 * 2;
+  width: math.div($size, 1.414);
+  height: math.div($size, 1.414) * 2;
   position: relative;
   @each $direction in 'left' 'right' {
     &.#{$direction} {
@@ -102,7 +104,8 @@
     width: $size;
     height: $width;
     position: absolute;
-    top: calc(50% - (#{$width} / 2));
+    //top: calc(50% - (#{$width} / 2));
+    top: calc(50% - #{math.div($width, 2)});
   }
 
   &:before {
@@ -124,7 +127,8 @@
       & span,
       &:before,
       &:after {
-        margin: 0 $size / 4;
+        //margin: 0 $size / 4;
+        margin: 0 math.div($size, 4);
         #{$direction}: 0;
         transform-origin: #{$direction} 50%;
       }
@@ -142,7 +146,8 @@
         & span,
         &:before,
         &:after {
-          #{$direction}: $size / 1.414 * -1;
+          //#{$direction}: $size / 1.414 * -1;
+          #{$direction}: math.div($size, 1.414) * -1;
         }
       }
     }
